# maind

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  go.mod  go.sum  main.go
.github/workflows/: ci.yml  release.yml
internal/cli/: connect.go  context.go  demo.go  export.go  forget.go  ingest.go  init.go  link.go  list.go  passwd.go  recall.go  remember.go  root.go  scan.go  shell.go  show.go  status.go  tags.go  unlock.go  unlock_test.go  version.go  watch.go
internal/config/: config.go  config_test.go
internal/crypto/: crypto.go  crypto_test.go
internal/model/: model.go  model_test.go
internal/store/: activity.go  queries.go  scan.go  store.go  store_test.go
internal/store/migrations/: 001_init.sql  002_activity.sql  003_scans.sql
internal/tui/: dashboard.go
python/: README.md  pyproject.toml
